...
fun DropdownTextField(
    modifier: Modifier = Modifier,
    pokemonListType: List<PokemonTypeUi>,
    onTypeSelected: (String) -> Unit,
    onResetType: () -> Unit
) {
    var text by remember { mutableStateOf("Search pokemons with type !") }
    var expanded by remember { mutableStateOf(false) }

    Column(modifier = modifier.fillMaxWidth()) {
        TextButton(
            modifier = Modifier
                .fillMaxWidth()
...
                trailingIcon = {
                    IconButton(
                        onClick = { expanded = false },
                    ) {
                        Icon(
                            painter = painterResource(id = R.drawable.baseline_clear_24),
                            contentDescription = "Back"
                        )
                    }
                },
                onClick = {
                    text = "Search pokemons with type !"
                    expanded = false
...
